# Athena

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: unitTestAction.yml
cmake/: Conan.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
include/: CMakeLists.txt  athena_functions.h  athena_maths.h  grid.h  grid_view.h  range.h  rect.h  vector.h
unit_tests/: CMakeLists.txt  catch_tests_runner.cpp
unit_tests/include/: athena_function_tests.cpp  grid_tests.cpp  grid_view_tests.cpp
unit_tests/src/: CMakeLists.txt  athena_function_tests.cpp  athena_maths_tests.cpp  grid_column_iterator_tests.cpp  grid_row_iterator_tests.cpp  grid_tests.cpp  grid_view_column_iterator_tests.cpp  grid_view_row_iterator_tests.cpp  grid_view_tests.cpp  range_tests.cpp  rect_tests.cpp
